cmake_minimum_required(VERSION 3.8)
project(Rosette)

include_directories(./h/)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        h/sys/bsd.h
        h/sys/dec.h
        h/sys/hppa.h
        h/sys/linux.h
        h/sys/ncr.h
        h/sys/rosette.h
        h/sys/sgi.h
        h/sys/sun-os4.h
        h/sys/sun3.h
        h/sys/sun4.h
        h/sys/sysv4.h
        h/Addr.h
        h/assert.h
        h/BinaryOb.h
        h/Bits.h
        h/BuiltinClass.h
        h/Code.h
        h/CommandLine.h
        h/Compile.h
        h/Cstruct.h
        h/Ctxt.h
        h/Dynload.h
        h/Expr.h
        h/ForeignFun.h
        h/Heap.h
        h/Interrupt.h
        h/Labels.h
        h/Location.h
        h/Mbox.h
        h/Meta.h
        h/Method.h
        h/MI.h
        h/misc.h
        h/ModuleInit.h
        h/Monitor.h
        h/Number.h
        h/Ob.h
        h/ObQue.h
        h/ObStk.h
        h/Opcode.h
        h/Operation.h
        h/osfcn.h
        h/Parser.h
        h/Pattern.h
        h/Prim.h
        h/Proc.h
        h/PtrCollect.h
        h/PtrQue.h
        h/Queue.h
        h/RblAtom.h
        h/RblStack.h
        h/RBLstream.h
        h/RBLstring.h
        h/Reader.h
        h/regexp.h
        h/ResizeAry.h
        h/StreamUtils.h
        h/Table.h
        h/Timer.h
        h/Timestamp.h
        h/Tuple.h
        h/Vm.h
        isode/config/dec-osi.h
        isode/config/dec.h
        isode/config/hppa.h
        isode/config/ncr.h
        isode/config/sgi.h
        isode/config/sun3-osi.h
        isode/config/sun3.h
        isode/config/sun4-osi.h
        isode/config/sun4.h
        isode/rblimisc/IMISC-01.c
        isode/rblimisc/IMISC-02.c
        isode/rblimisc/IMISC-03.c
        isode/rblimisc/IMISC-04.c
        isode/rblimisc/IMISC-05.c
        isode/rblimisc/IMISC-06.c
        isode/rblimisc/IMISC-07.c
        isode/rblimisc/IMISC-08.c
        isode/rblimisc/IMISC-09.c
        isode/rblimisc/IMISC-10.c
        isode/rblimisc/IMISC-11.c
        isode/rblimisc/IMISC-12.c
        isode/rblimisc/IMISC-13.c
        isode/rblimisc/IMISC-ops.c
        isode/rblimisc/IMISC-ops.h
        isode/rblimisc/IMISC-stubs.c
        isode/rblimisc/IMISC-types.h
        isode/rblimisc/imisc.c
        isode/rblimisc/imiscd.c
        isode/rblimisc/ryinitiator.c
        isode/rblimisc/ryinitiator.h
        isode/rblimisc/ryresponder.c
        isode/rblimisc/ryresponder.h
        isode/rbllookup/LOOKUP-01.c
        isode/rbllookup/LOOKUP-02.c
        isode/rbllookup/LOOKUP-03.c
        isode/rbllookup/LOOKUP-04.c
        isode/rbllookup/LOOKUP-05.c
        isode/rbllookup/LOOKUP-06.c
        isode/rbllookup/LOOKUP-07.c
        isode/rbllookup/LOOKUP-08.c
        isode/rbllookup/LOOKUP-09.c
        isode/rbllookup/lookup.c
        isode/rbllookup/lookupd.c
        isode/rbllookup/PasswordLookup-ops.c
        isode/rbllookup/PasswordLookup-ops.h
        isode/rbllookup/PasswordLookup-stubs.c
        isode/rbllookup/PasswordLookup-types.h
        isode/rbllookup/ryinitiator.c
        isode/rbllookup/ryinitiator.h
        isode/rbllookup/ryresponder.c
        isode/rbllookup/ryresponder.h
        isode/rbltsap/tsaplisten.c
        isode/rbltsap/tsaprovider.c
        src/Actor.cc
        src/BaseSupp.cc
        src/BigBang.cc
        src/BinaryOb.cc
        src/Code.cc
        src/CommandLine.cc
        src/Compile.cc
        src/Console.cc
        src/Cstruct.cc
        src/Ctxt.cc
        src/Dump-world.cc
        src/Dynl_hpux.c
        src/Dynl_sysv4.c
        src/Dynload.cc
        src/ess-config.cc
        src/Expr.cc
        src/ForeignFun.cc
        src/Heap.cc
        src/InetSupp.cc
        src/Interrupt.cc
        src/IsodeSupp.cc
        src/Labels.cc
        src/Location.cc
        src/main.cc
        src/Mbox.cc
        src/Meta.cc
        src/Method.cc
        src/MI.cc
        src/misc.cc
        src/ModuleInit.cc
        src/Monitor.cc
        src/MotifSupp.cc
        src/Number.cc
        src/Ob.cc
        src/ObQue.cc
        src/ObStk.cc
        src/Opcode.cc
        src/Operation.cc
        src/our_nlist.c
        src/Parser.cc
        src/Pattern.cc
        src/Prim.cc
        src/Proc.cc
        src/PtrCollect.cc
        src/PtrQue.cc
        src/Queue.cc
        src/rbl-rosy.cc
        src/RblAtom.cc
        src/RblStack.cc
        src/RBLstream.cc
        src/RBLstring.cc
        src/Reader.cc
        src/regexp.cc
        src/ResizeAry.cc
        src/rosette-config.cc
        src/rosh-config.cc
        src/SocketSupp.cc
        src/StreamUtils.cc
        src/StringStore.cc
        src/Table.cc
        src/Timer.cc
        src/Timestamp.cc
        src/Tuple.cc
        src/unexec.c
        src/unexec1.c
        src/unexelf.c
        src/unexhp9k800.c
        src/unexmips.c
        src/UnixSupp.cc
        src/Vm.cc)

add_executable(Rosette ${SOURCE_FILES})